# eyewear_node/routes/v1/invoice/index.js
@@ -1,9 +1,12 @@
-const { Router } = require('express')
+const { Router } = require("express");
+const { authenticate } = require("../../../middlewares/auth");
+const {
+  index,
+  orderInvoice,
+} = require("../../../controllers/invoice/invoice.controller");
+const router = Router();
 
-const {index} = require('../../../controllers/invoice/invoice.controller')
-const router = Router()
-
-router.get('/orderinvoice', index)
-
+router.get("/orderinvoice", index);
+router.get("/orderinvoiceinfo", authenticate, orderInvoice);
 
 module.exports = router;
