# eyewear_node/swagger.yaml
@@ -1077,6 +1077,31 @@ paths:
           schema:
             $ref: "#/definitions/NotificationUnreadCount"
 
+  /orderinvoiceinfo:
+    parameters:
+      - $ref: '#/parameters/Authrization'
+      - $ref: '#/parameters/Timezone'
+      - $ref: '#/parameters/AcceptLanguage'
+    get:
+      summary: "Orders Invoice"
+      description: get order invoice data for app API
+      tags:
+        - OrderInvoice apis
+      produces:
+        - "application/json"
+      parameters:
+        - in: query
+          name: order_id
+          type: string
+          required: true
+          example: 66576d762c9abb63ef20e9b2
+          default: 66576d762c9abb63ef20e9b2 
+      responses:
+        200:
+          description: "successfull operation"
+          schema:
+            $ref: "#/definitions/orderInvoice"
+
 definitions:
   Timestamp:
     type: object
@@ -1381,6 +1406,16 @@ definitions:
            message:
             type: string
             example: "Notification unread count retrived successfullly!"
+
+  
+  orderInvoice:
+    allOf:
+      - $ref: "#/definitions/orderInvoice"
+      - type: object
+        properties:
+           message:
+            type: string
+            example: "Data retrived successfullly!"
 
 
   
